# AlphaRecode

./: .gitignore  .gitmodules  AlphaRecode.f90  AlphaRecodeSpec.txt  AlphaRecodedPedigree.txt  CMakeCache.txt  CMakeLists.txt  LD1_combine_ped.txt  Makefile  OrcadesPed.txt  README.md  cmake_install.cmake  dictionary.f90  ped.txt  pedigreeTable.f90  priority.f90  test.txt
objs/AH/: Makefile  cmake_install.cmake
src/: AlphaRecodeSpecFileModule.f90  CMakeLists.txt  PedigreeExtractionModule.f90  main.f90
